# Distributed-File-System

dist_file_system/: Cargo.toml
dist_file_system/src/: error.rs  main.rs  storage.rs
frontend/my-file-system/: deno.json  fresh.gen.ts  import_map.json  tailwind.config.ts
frontend/my-file-system/components/: FileItem.tsx  FileList.tsx  FileUpload.tsx
frontend/my-file-system/islands/: FileUpload.tsx
frontend/my-file-system/routes/: _app.tsx  index.tsx
frontend/my-file-system/utils/: fileService.ts
