[package]
name = "dist_file_system"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
tokio = { version = "1.26.0", features = ["full", "signal"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "dist_file_system"
path = "src/main.rs"